test/library/standard/List/bradc/emptySeq3.good
emptySeq3.chpl:3: error: unresolved call 'linkedList(int(64)).init=(nil)'
$CHPL_HOME/modules/standard/LinkedList.chpl:77: note: candidates are: linkedList.init=(l: this.type )
$CHPL_HOME/modules/standard/LinkedList.chpl:53: note:                 linkedList.init=(other: this.type)
